@@ -35,6 +35,7 @@ Misc work going on.....
 * (bug 3190) Added some date format choices for language sr
 * (bug 1334) LanguageGa.php update
 * (bug 1020) Changing user interface language does not work immediately
+* (bug 2753) Some namespaces were not translated in LanguageTa.php (Tamil)
 
 
 === Caveats ===
